[package]
name = "rexif"
version = "0.2.0"
authors = ["Elvis Pfützenreuter <epxx@epxx.co>"]
exclude = ["samples/", "gitpage/"]
description = "RExif is a native Rust crate, written to extract EXIF data from JPEG and TIFF images."
license = "MIT"
homepage = "https://github.com/elvis-epx/rexif"
repository = "https://github.com/elvis-epx/rexif.git"

[lib]
name = "rexif"
path = "src/lib.rs"

[[bin]]
name = "rexiftool"
path = "src/main.rs"
